chore: badge UI technical refinements and accessibility (#305)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,6 +96,10 @@
     "badgesHint": "Visit machines and add new ones to earn badges!",
     "lockedBadges": "Locked Badges",
     "unlockedBadges": "Unlocked",
+    "lockedBadge": "Locked",
+    "badgeSashHint": "Tap a badge for details",
+    "viewAllLockedBadges": "View all locked badges",
+    "viewAllLockedBadgesHint": "Opens full badge collection",
     "progress": "Progress",
     "keepExploring": "Keep exploring to unlock this badge!",
     "gotIt": "Got it!",
@@ -155,7 +159,6 @@
     "feedbackSubmit": "Send Feedback",
     "feedbackSuccess": "Thank you for your feedback! We really appreciate it.",
     "feedbackError": "Failed to send feedback. Please try again.",
-    "badgeSashHint": "Tap a badge for details",
     "xpToNext": "{{xp}} XP to next level",
     "levelUp": "Level Up! You're now Level {{level}}",
     "sectionAccount": "Account",
