--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -96,6 +96,10 @@
     "badgesHint": "¡Visita máquinas y añade nuevas para ganar insignias!",
     "lockedBadges": "Insignias Bloqueadas",
     "unlockedBadges": "Desbloqueadas",
+    "lockedBadge": "Bloqueada",
+    "badgeSashHint": "Toca una insignia para ver detalles",
+    "viewAllLockedBadges": "Ver todas las insignias bloqueadas",
+    "viewAllLockedBadgesHint": "Abre la colección completa de insignias",
     "progress": "Progreso",
     "keepExploring": "¡Sigue explorando para desbloquear esta insignia!",
     "gotIt": "¡Entendido!",
@@ -155,7 +159,6 @@
     "feedbackSubmit": "Enviar Comentarios",
     "feedbackSuccess": "¡Gracias por tus comentarios! Lo apreciamos mucho.",
     "feedbackError": "Error al enviar comentarios. Por favor intenta de nuevo.",
-    "badgeSashHint": "Toca una insignia para ver detalles",
     "xpToNext": "{{xp}} XP para el siguiente nivel",
     "levelUp": "¡Subiste al Nivel {{level}}!",
     "sectionAccount": "Cuenta",
@@ -442,7 +445,7 @@
       "section3Bullet4": "Comunicarnos contigo sobre tu cuenta",
       "section3Bullet5": "Analizar tendencias de uso de la aplicación para mejorar el rendimiento y las funciones",
       "section4Title": "4. Datos de Ubicación",
-      "section4Text": "Recopilamos datos de ubicación solo cuando usas explícitamente funciones basadas en ubicación (encontrar máquinas cercanas, agregar una nueva máquina, registrar visita o verificar la existencia de una máquina). Puedes controlar los permisos de ubicación a través de la configuración de tu dispositivo.",
+      "section4Text": "Recopilamos datos de ubicación solo cuando usas explitamente funciones basadas en ubicación (encontrar máquinas cercanas, agregar una nueva máquina, registrar visita o verificar la existencia de una máquina). Puedes controlar los permisos de ubicación a través de la configuración de tu dispositivo.",
       "section5Title": "5. Compartir Datos",
       "section5Text": "No vendemos tus datos personales. Tus contribuciones públicas (ubicaciones de máquinas, fotos, verificaciones) se comparten con la comunidad para ayudar a otros usuarios a descubrir máquinas expendedoras. Tu correo electrónico permanece privado.",
       "section6Title": "6. Seguridad de Datos",
