--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -159,6 +159,8 @@
     "feedbackSubmit": "Enviar Comentarios",
     "feedbackSuccess": "¡Gracias por tus comentarios! Lo apreciamos mucho.",
     "feedbackError": "Error al enviar comentarios. Por favor intenta de nuevo.",
+    "feedbackRateInfo": "Puedes enviar comentarios una vez cada 24 horas",
+    "feedbackSentInline": "¡Comentarios enviados!",
     "xpToNext": "{{xp}} XP para el siguiente nivel",
     "levelUp": "¡Subiste al Nivel {{level}}!",
     "sectionAccount": "Cuenta",
