ui: handle unauthenticated deep links with login redirect (issue #269)
- Added 'machine.loginToViewDetails' and 'machine.loginRequired' translations.
- Implemented login redirection in MachineDetailScreen when data fetch fails due to RLS.
- Linked to security improvements in PR #319.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -182,6 +182,8 @@
     "localGems": "Gemas Locales"
   },
   "machine": {
+    "loginRequired": "Inicio de sesión requerido",
+    "loginToViewDetails": "Inicia sesión para ver todos los detalles y actividad reciente.",
     "unnamed": "Máquina sin nombre",
     "noAddress": "Sin dirección",
     "noPhoto": "Sin foto",
