--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -182,6 +182,8 @@
     "localGems": "Local Gems"
   },
   "machine": {
+    "loginRequired": "Login Required",
+    "loginToViewDetails": "Login to see all machine details and recent activity.",
     "unnamed": "Unnamed Machine",
     "noAddress": "No address",
     "noPhoto": "No photo",
