ui: handle unauthenticated deep links with login redirect (issue #269) (#321)
* ui: handle unauthenticated deep links with login redirect (issue #269)

- Added 'machine.loginToViewDetails' and 'machine.loginRequired' translations.
- Implemented login redirection in MachineDetailScreen when data fetch fails due to RLS.
- Linked to security improvements in PR #319.

* ui: address copilot review comments for deep link auth

- Removed duplicate 'loginRequired' translation keys.
- Enhanced catch block in MachineDetailScreen to handle unauthenticated RLS errors.

* ui: refine error handling and navigation consistency in deep link loading

- Simplified catch block as RLS errors are handled in null data check.
- Ensured consistent navigation flow via onDismiss callback for all users.
- Addresses final Copilot review comments.

* security: comprehensive scraping protection across all RPCs

- Added dynamic REVOKE for any function reading machines_with_details.
- Applied rate limiting and limit caps to secondary read RPCs.
- Increased machines_in_bounds cap to 200 to match frontend.
- Revoked execution from 'anon' for all curation-related functions.
- Addressed all final Copilot review comments.

* cleanup: remove SQL migration from UI branch

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -187,6 +187,8 @@
     "localGems": "Local Gems"
   },
   "machine": {
+    "loginRequired": "Login Required",
+    "loginToViewDetails": "Login to see all machine details and recent activity.",
     "unnamed": "Unnamed Machine",
     "noAddress": "No address",
     "noPhoto": "No photo",
@@ -211,7 +213,6 @@
     "photoCarousel": "Photo carousel",
     "photoLabel": "Machine photo {{current}} of {{total}}",
     "viewPhotoFullScreen": "View photo in full screen",
-    "loginRequired": "Login Required",
     "loginToSave": "Please log in to save machines.",
     "loginToCheckIn": "Please log in to check in.",
     "saveSuccess": "Machine saved!",
