--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -187,6 +187,8 @@
     "localGems": "Gemas Locales"
   },
   "machine": {
+    "loginRequired": "Inicio de sesión requerido",
+    "loginToViewDetails": "Inicia sesión para ver todos los detalles y actividad reciente.",
     "unnamed": "Máquina sin nombre",
     "noAddress": "Sin dirección",
     "noPhoto": "Sin foto",
@@ -211,7 +213,6 @@
     "photoCarousel": "Carrusel de fotos",
     "photoLabel": "Foto de máquina {{current}} de {{total}}",
     "viewPhotoFullScreen": "Ver foto en pantalla completa",
-    "loginRequired": "Inicio de sesión requerido",
     "loginToSave": "Por favor inicia sesión para guardar máquinas.",
     "loginToCheckIn": "Por favor inicia sesión para registrar tu visita.",
     "saveSuccess": "¡Máquina guardada!",
