security: complete P0 critical security audit (issue #268)
- Remove raw error.message exposure from 5 screens and 1 edge function
- Add deep link route allowlist for push notification navigation
- Add common.genericError i18n key (en/es)
- Mark all P0 and P0.5 items as verified in PRE_LAUNCH_AUDIT.md

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,8 @@
     "remove": "Remove",
     "back": "Back",
     "user": "User",
-    "dismiss": "Dismiss"
+    "dismiss": "Dismiss",
+    "genericError": "Something went wrong. Please try again."
   },
   "auth": {
     "login": "Log In",
