--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,12 +70,20 @@
       "loginFailed": "Login failed",
       "signupFailed": "Sign up failed"
     },
-    "accountCreated": {
-      "title": "Account created!",
-      "message": "Please check your email to verify your account."
-    }
-  },
-  "profile": {
+          "accountCreated": {
+            "title": "Account created!",
+            "message": "Please check your email to verify your account."
+          },
+          "verifyEmail": {
+            "title": "Confirm your email",
+            "subtitle": "We sent a confirmation link to:",
+            "instruction": "Please check your inbox and click the link to activate your account.",
+            "iConfirmed": "I've confirmed my email",
+            "resend": "Resend link",
+            "sentAgain": "Confirmation link sent again!",
+            "stillNotVerified": "Account still not verified. Please check your email."
+          }
+        },  "profile": {
     "title": "Profile",
     "accountSettings": "Account Settings",
     "level": "LVL",
