security: address copilot feedback on email verification flow
- Fixed JSON syntax errors in locale files.
- Implemented 60s cooldown for resending verification emails.
- Added success/error message styling to verification banner.
- Improved checkStatus logic with refreshSession and error handling.
- Cleaned up unused imports.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,7 +83,8 @@
             "sentAgain": "Confirmation link sent again!",
             "stillNotVerified": "Account still not verified. Please check your email."
           }
-        },  "profile": {
+    },
+  "profile": {
     "title": "Profile",
     "accountSettings": "Account Settings",
     "level": "LVL",
