--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -71,11 +71,20 @@
       "loginFailed": "Error al iniciar sesión",
       "signupFailed": "Error al registrarse"
     },
-    "accountCreated": {
-      "title": "¡Cuenta creada!",
-      "message": "Por favor revisa tu correo para verificar tu cuenta."
-    }
-  },
+          "accountCreated": {
+            "title": "¡Cuenta creada!",
+            "message": "Por favor revisa tu correo para verificar tu cuenta."
+          },
+          "verifyEmail": {
+            "title": "Confirma tu correo",
+            "subtitle": "Enviamos un enlace de confirmación a:",
+            "instruction": "Por favor revisa tu bandeja de entrada y haz clic en el enlace para activar tu cuenta.",
+            "iConfirmed": "Ya he confirmado mi correo",
+            "resend": "Reenviar enlace",
+            "sentAgain": "¡Enlace enviado de nuevo!",
+            "stillNotVerified": "La cuenta aún no está verificada. Revisa tu correo."
+          }
+    },
   "profile": {
     "title": "Perfil",
     "accountSettings": "Configuración de Cuenta",
