security: implement machine submission rate limiting with admin bypass (issue #271)
- Created submit_machine RPC with 3 per 24h rate limit and admin role bypass.
- Refactored add-machine.tsx to use the new RPC for safer submissions.
- Added localization for rate limit error messages in English and Spanish.
- Fixed TypeScript 'id' variable name error in fetchMachineById (machines.ts).
- Updated pre-launch audit P2 checklist items.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -324,6 +324,7 @@
       "locationRequired": "Please wait for GPS location or enable location services.",
       "invalidCoordinates": "Invalid coordinates"
     },
+    "rateLimitExceeded": "Submission limit reached. Please try again tomorrow.",
     "locationVerification": {
       "title": "Photo Location Found",
       "question": "We found GPS data in your photo. Is this the correct location for the vending machine?",
