security: auth hardening & abuse prevention (issue #320 - P1)
- Enforce email verification server-side via require_verified_email() on all 10 write RPCs
- Add email check to 8 RLS INSERT/DELETE policies and 2 storage upload policies
- Add client-side auth rate limiting (login 5/15min, signup 3/1hr, forgot 3/15min)
- Optimize image picker quality from 1.0 to 0.7 (COMPRESSION_QUALITY) across all screens
- Document session expiry handling in supabase.ts
- Update PRE_LAUNCH_AUDIT.md checklist

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -69,7 +69,8 @@
     },
     "errors": {
       "loginFailed": "Login failed",
-      "signupFailed": "Sign up failed"
+      "signupFailed": "Sign up failed",
+      "rateLimitExceeded": "Too many attempts. Please wait a few minutes and try again."
     },
           "accountCreated": {
             "title": "Account created!",
