fix: machine detail UI bugs — pluralization, button text, truncation
- Fix "1 weeks ago" → "1 week ago" (singular handling for weeks/months/years)
- Show "Visit Again" instead of "I Visited" when cooldown has expired
- Shorten "Get Directions" to "Directions" to prevent truncation with 3 buttons
- Add "Visit once a week to earn XP" hint above check-in button after visiting

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -218,8 +218,10 @@
     "calculating": "Calculating...",
     "verifiedAgo": "Verified {{time}}",
     "tapForDetails": "Tap for details",
-    "getDirections": "Get Directions",
+    "getDirections": "Directions",
     "iVisited": "I Visited",
+    "visitAgain": "Visit Again",
+    "weeklyVisitHint": "Visit once a week to earn XP",
     "visited": "Visited",
     "photoCarousel": "Photo carousel",
     "photoLabel": "Machine photo {{current}} of {{total}}",
