--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -220,6 +220,8 @@
     "tapForDetails": "Toca para más detalles",
     "getDirections": "Direcciones",
     "iVisited": "Visité",
+    "visitAgain": "Visitar de Nuevo",
+    "weeklyVisitHint": "Visita una vez por semana para ganar XP",
     "visited": "Visitada",
     "photoCarousel": "Carrusel de fotos",
     "photoLabel": "Foto de máquina {{current}} de {{total}}",
