fix: make visits one-time-only, remove revisiting and cooldown
Eliminates multiple bugs caused by allowing repeat visits (duplicate
React keys, confusing "Visit Again" button states, unnecessary 7-day
cooldown complexity). Visits are now permanent — one per user per machine.

- Add migration to deduplicate visits and add UNIQUE(user_id, machine_id)
- Drop cooldown trigger/function, update create_visit with ON CONFLICT
- Simplify check-in logic: button shows "Visited" (disabled) permanently
- Remove visitAgain/weeklyVisitHint translations and UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -220,8 +220,6 @@
     "tapForDetails": "Tap for details",
     "getDirections": "Directions",
     "iVisited": "I Visited",
-    "visitAgain": "Visit Again",
-    "weeklyVisitHint": "Visit once a week to earn XP",
     "visited": "Visited",
     "photoCarousel": "Photo carousel",
     "photoLabel": "Machine photo {{current}} of {{total}}",
@@ -282,7 +280,7 @@
       },
       "alreadyVisited": {
         "title": "Already Checked In",
-        "message": "You've already checked in to this machine recently."
+        "message": "You've already checked in to this machine."
       },
       "success": {
         "title": "Checked In!",
