--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -220,8 +220,6 @@
     "tapForDetails": "Toca para más detalles",
     "getDirections": "Direcciones",
     "iVisited": "Visité",
-    "visitAgain": "Visitar de Nuevo",
-    "weeklyVisitHint": "Visita una vez por semana para ganar XP",
     "visited": "Visitada",
     "photoCarousel": "Carrusel de fotos",
     "photoLabel": "Foto de máquina {{current}} de {{total}}",
@@ -282,7 +280,7 @@
       },
       "alreadyVisited": {
         "title": "Ya Registrado",
-        "message": "Ya has registrado una visita a esta máquina recientemente."
+        "message": "Ya has registrado una visita a esta máquina."
       },
       "success": {
         "title": "¡Visita Registrada!",
