Added invalidCredentials locales to be more specific than genericError when trying to login with wrong password/email

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,8 @@
     "back": "Back",
     "user": "User",
     "dismiss": "Dismiss",
-    "genericError": "Something went wrong. Please try again."
+    "genericError": "Something went wrong. Please try again.",
+    "invalidCredentials": "Invalid email or password"
   },
   "auth": {
     "login": "Log In",
