fix: admin dashboard UX improvements (#348, #351, #352, #353)
- Hide duplicates section when no nearby machines found (#351)
- Open native maps app instead of browser on iOS/Android (#348)
- Add image error fallbacks across all admin photo displays (#348)
- Add section header counts to pending machines and photos (#348)
- Show contributor/uploader avatars in cards with icon fallback (#352)
- Add category icons to chips in review screen and cards (#352)
- Ban user now auto-rejects their pending submissions (#353)
- Refresh pending lists after banning with rejection count feedback (#353)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -621,6 +621,7 @@
     "confirmBanMessage": "This will prevent {{name}} from submitting machines, photos, or check-ins.",
     "banningUser": "Banning {{name}}...",
     "banSuccess": "User has been banned.",
+    "banSuccessWithRejections": "User has been banned. {{machines}} pending machine(s) and {{photos}} pending photo(s) were auto-rejected.",
     "banError": "Failed to ban user. Please try again."
   },
   "report": {
