feat: remove community photo upload feature
Remove the ability for users to add photos to existing machines.
Primary photo submitted with new machines still works. Admin can
still delete active photos. Simplifies admin dashboard to machines-only
review queue and removes photo review pipeline entirely.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -231,10 +231,6 @@
     "unsaveSuccess": "Eliminada de guardados",
     "saveError": "Error al guardar la máquina.",
     "unsaveError": "Error al eliminar la máquina de guardados.",
-    "addPhoto": "Añadir Foto",
-    "photoAdded": "¡Foto añadida con éxito!",
-    "photoSubmittedForReview": "¡Gracias por tu contribución! Tu foto será visible una vez que nuestro equipo la haya revisado.",
-    "uploadError": "Error al subir la foto.",
     "stalePrompt": "Esta máquina no ha sido verificada recientemente. ¿Puedes confirmar que sigue aquí?",
     "verifyNow": "Verificar Ahora",
     "neverVerifiedPrompt": "Nadie ha verificado esta máquina todavía. ¡Sé el primero en confirmar que está aquí!",
@@ -568,7 +564,7 @@
     "submittedBy": "Enviado Por",
     "viewProfile": "Ver perfil",
     "location": "Ubicación",
-    "openInMaps": "Abrir en Google Maps",
+    "openInMaps": "Abrir en Mapas",
     "nearbyCheck": "Verificación de Duplicados",
     "duplicateExplanation": "Busca máquinas activas en un radio de 50m y compara la similitud de nombres para detectar posibles duplicados.",
     "noDuplicates": "No se encontraron duplicados cercanos",
@@ -601,16 +597,6 @@
     "daysAgo": "hace {{count}} día(s)",
     "hoursAgo": "hace {{count}} hora(s)",
     "justNow": "Ahora mismo",
-    "pendingPhotos": "Fotos Pendientes",
-    "pendingPhotosSubtext": "Fotos enviadas por usuarios que esperan revisión",
-    "photosQueueEmpty": "No hay fotos pendientes",
-    "approvePhoto": "Aprobar foto",
-    "rejectPhoto": "Rechazar foto",
-    "photoOf": "Foto de",
-    "photoApproveSuccess": "Foto aprobada y ahora visible en la máquina.",
-    "photoApproveError": "Error al aprobar la foto. Inténtalo de nuevo.",
-    "photoRejectSuccess": "Foto rechazada.",
-    "photoRejectError": "Error al rechazar la foto. Inténtalo de nuevo.",
     "deletePhoto": "Eliminar foto",
     "deletePhotoHint": "Elimina permanentemente esta foto de la máquina",
     "deletePhotoSuccess": "Foto eliminada.",
@@ -621,7 +607,7 @@
     "confirmBanMessage": "Esto impedirá que {{name}} envíe máquinas, fotos o registros de visita.",
     "banningUser": "Baneando a {{name}}...",
     "banSuccess": "El usuario ha sido baneado.",
-    "banSuccessWithRejections": "El usuario ha sido baneado. {{machines}} máquina(s) y {{photos}} foto(s) pendientes fueron rechazadas automáticamente.",
+    "banSuccessWithRejections": "El usuario ha sido baneado. {{machines}} máquina(s) pendientes fueron rechazadas automáticamente.",
     "banError": "Error al banear al usuario. Inténtalo de nuevo."
   },
   "report": {
